--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-font": "^13.0.3",
     "expo-linear-gradient": "~14.0.2",
     "expo-modules-core": "^2.2.2",
+    "expo-notifications": "^0.29.13",
     "expo-permissions": "^14.4.0",
     "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
