--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react-native-gifted-charts": "^1.4.57",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.2.5",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "3.5.0",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
     "react-native-svg": "15.8.0",
@@ -62,6 +62,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@react-native-community/cli": "^15.1.3",
     "expo": "^52.0.35",
     "expo-module-scripts": "^4.0.4",
     "metro-react-native-babel-preset": "^0.77.0"
