--- a/package.json
+++ b/package.json
@@ -43,20 +43,19 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-crypto": "^2.2.0",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-charts": "^1.4.57",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-permissions": "^5.2.5",
-    "react-native-reanimated": "3.5.0",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.6.0",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.10.1",
     "react-native-vision-camera": "^4.6.4",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "^13.13.2",
+    "react-native-webview": "^13.12.5",
     "tailwind-rn": "^2.0.0",
     "victory-native": "^41.16.1"
   },
