--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-permissions": "^14.4.0",
     "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
+    "expo-video": "~2.0.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "react": "18.3.1",
@@ -58,8 +59,7 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5",
     "tailwind-rn": "^2.0.0",
-    "victory-native": "^41.16.1",
-    "expo-video": "~2.0.5"
+    "victory-native": "^41.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
