--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-vision-camera": "^4.6.4",
     "react-native-web": "~0.19.13",
     "react-native-webview": "^13.12.5",
+    "socket.io-client": "^4.8.1",
     "tailwind-rn": "^2.0.0",
     "victory-native": "^41.16.1"
   },
@@ -65,7 +66,7 @@
     "@babel/core": "^7.20.0",
     "@babel/plugin-transform-private-methods": "^7.25.9",
     "@react-native-community/cli": "^15.1.3",
-    "expo": "^52.0.35",
+    "expo": "^52.0.39",
     "expo-module-scripts": "^4.0.4",
     "metro-react-native-babel-preset": "^0.77.0"
   },
